--- a/index.html
+++ b/index.html
@@ -45,7 +45,23 @@
             <div class="right"><img src="Images/Coal Container 2 .jpg" alt="">
 
             </div>
-
+<div class="slideshow">
+            <div class="cycle-slideshow">
+                <div class="cycle-slideshow"
+                data-cycle-fx="scrollHorz"
+                data-cycle-timeout="0"
+                data-cycle-prev="#prev"
+                data-cycle-next="#next"
+    >
+                <img src="Images/B&A River.jpg">
+                <img src="Images/B&A Desert.jpg">
+                <img src="Images/B&A Glacier.jpg">
+                <img src="Images/B&A Dam.jpg">
+            </div>
+            <div class="center">
+                <a href=# id="prev">Prev</a> 
+                <a href=# id="next">Next</a>
+            </div>
           </aside>
         </div>
       </main>
