--- a/index.html
+++ b/index.html
@@ -45,6 +45,28 @@
             <div class="right"><img src="Images/Coal Container 2 .jpg" alt="">
 
             </div>
+            <div>
+<div.main{
+
+  }
+
+  .slideshow a{
+  flex basis: auto;
+
+  }
+
+  @media screen and (max-width: 600px) {
+ nav ul {
+
+  flex-direction: column;
+  justify-content: space around;
+
+  }
+  }
+  
+</div>
+              
+            </div>
 <div class="slideshow">
             <div class="cycle-slideshow">
                 <div class="cycle-slideshow"
