--- a/index.html
+++ b/index.html
@@ -69,6 +69,9 @@
             </div>
 <div class="slideshow">
             <div class="cycle-slideshow">
+
+              <script src="https://ajax.googleapis.com/ajax/libs/jquery/1/jquery.min.js"></script>
+<script src="https://malsup.github.io/jquery.cycle2.js"></script>
                 <div class="cycle-slideshow"
                 data-cycle-fx="scrollHorz"
                 data-cycle-timeout="0"
