--- a/index.html
+++ b/index.html
@@ -69,14 +69,7 @@
             </div>
 <div class="slideshow">
             <div class="cycle-slideshow">
-
-              <script src="https://ajax.googleapis.com/ajax/libs/jquery/1/jquery.min.js"></script>
-<script src="https://malsup.github.io/jquery.cycle2.js"></script>
-                <div class="cycle-slideshow"
-                data-cycle-fx="scrollHorz"
-                data-cycle-timeout="0"
-                data-cycle-prev="#prev"
-                data-cycle-next="#next"
+                
     >
                 <img src="Images/B&A River.jpg">
                 <img src="Images/B&A Desert.jpg">
@@ -87,6 +80,10 @@
                 <a href=# id="prev">Prev</a> 
                 <a href=# id="next">Next</a>
             </div>
+  <div>
+     <script src="https://ajax.googleapis.com/ajax/libs/jquery/1/jquery.min.js"></script>
+<script src="https://malsup.github.io/jquery.cycle2.js"></script>
+  
           </aside>
         </div>
       </main>
