--- a/index.html
+++ b/index.html
@@ -78,6 +78,13 @@
                 <a href=# id="prev">Prev</a> 
                 <a href=# id="next">Next</a>
             </div>
+  <article>
+
+    <h1>Photos</h1>
+  </article>
+</div>
+  <footer>Copyright &copy; W3Schools.com</footer>
+  
   <div>
      <script src="https://ajax.googleapis.com/ajax/libs/jquery/1/jquery.min.js"></script>
 <script src="https://malsup.github.io/jquery.cycle2.js"></script>
